# bb-result

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  result.hpp
test/: CMakeLists.txt  result_test.cpp
